# nobody

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: efi_solar_system.txt  solar_system.txt  solar_system_converted.txt  solarsystem1-linear.txt  solarsystem2-ortho  sun_earth_system.txt  test_tryangle.txt  two_body_bounded_1.txt  two_body_bounded_2.txt  two_body_bounded_3.txt  two_body_bounded_cycloid.txt  two_body_unbounded_hyperbol.txt  two_body_unbounded_parabel.txt
docs/: .gitignore
docs/report/: background.tex  conclusion.tex  ephemerid_solar_system.tex  implementation.tex  introduction.tex  main.tex  main2.tex  title_head.tex
docs/report/code/: leapfrog_integrator.cc  runge_kutta_integrator.cc  symplectic_euler_integrator.cc
docs/report/plots/: diagram.eps  diagram.gp  diagram2.gp  diagramPlot.tex  results_euler.txt  results_euler_0.02.txt  results_leapfrog_0.05.txt  results_rk4_0.02.txt  results_rk4_0.05.txt  results_seuler_0.02.txt  sun_earth_2_zoom.eps  sun_earth_2_zoom.gp  sunearth2.eps
docs/slides/: .gitignore  3-body_gravitational_force.ggb  beamer.tex  gravitational_force.tex
libnobody/: CMakeLists.txt  particle.hpp  particle.test.cpp
nobody/: CMakeLists.txt  camera.cpp  camera.hpp  energy.cpp  energy.hpp  euler_integrator.cpp  euler_integrator.hpp  glut_app.cpp  glut_app.hpp  main.cpp  orthonormal_frame.cpp  particle.hpp  particle_loader.cpp  particle_loader.hpp  runge_kutta_integrator.cpp  runge_kutta_integrator.hpp  viewer.cpp  viewer.hpp  viewer_main.cpp
report/: .gitignore  abstract.tex  references.tex  results.tex
report/code/: adaptive_integrator.cc  euler_integrator.cc  particle_acceleration.cc
report/plots/: diagram.tex  results_euler_0.05.txt  results_leapfrog_0.02.txt  results_seuler_0.05.txt  sun_earth_2.eps  sun_earth_2.gp  sun_earth_2.tex  sun_earth_2_plot.tex  sun_earth_2_zoom.tex  sun_earth_2_zoom_plot.tex  sun_earth_5.eps  sun_earth_5.gp  sun_earth_5.tex  sun_earth_5_plot.tex  sunearth2.tex
slides/: 3-body_gravitational_force.tex  gravitational_force.ggb
src/: camera.cc  camera.h  energy.cc  energy.h  euler_integrator.cc  euler_integrator.h  glut_app.cc  glut_app.h  main.cc  orthonormal_frame.cc  orthonormal_frame.h  particle.h  particle_loader.cc  particle_loader.h  runge_kutta_integrator.cc  runge_kutta_integrator.h  util.h
